[fix] styles.css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>4Geeks VSCode</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="main-website-styles.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.51.0/min/vs/loader.min.js"></script>
 </head>
 <body>
